--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.86"
 bytes = "1.7.1"
+dashmap = "6.0.1"
 enum_dispatch = "0.3.13"
+lazy_static = "1.5.0"
 thiserror = "1.0.63"
